fix the hover effect on the "go to cart" button by adding a click event instead of wrapping it in the Navlink

--- a/src/views/courses/CourseList.css
+++ b/src/views/courses/CourseList.css
@@ -94,17 +94,6 @@
     color: #edf2f4;
 }
 
-.cart_icon {
-    padding-top: 5px;
-    font-size: 25px;
-    color: #18ac9d;
-    transition: color 0.3s;
-}
-
-.cart_icon:hover {
-    color: #edf2f4;
-}
-
 .course__details__link:hover > .course__info__price > .course__info__cart__btn {
     display: block;
 }
